force-app/main/default/objects/Data_Quality_Field_Config__c/Data_Quality_Field_Config__c.object-meta.xml
<CustomObject>
    <description>Individual field configuration for a Data Quality Config.</description>
    <label>Data Quality Field Config</label>
    <nameField>
        <displayFormat>DQFC-{0000}</displayFormat>
        <label>Field Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Quality Field Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>