force-app/main/default/objects/Data_Quality_Field_Config__c/fields/Data_Quality_Config__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Config__c</fullName>
    <description>Parent Configuration</description>
    <label>Data Quality Config</label>
    <referenceTo>Data_Quality_Config__c</referenceTo>
    <relationshipLabel>Data Quality Field Configs</relationshipLabel>
    <relationshipName>Data_Quality_Field_Configs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>