force-app/main/default/objects/Data_Quality_Field_Config__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API Name of the Field.</description>
    <label>Field API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>