force-app/main/default/objects/Data_Quality_Field_Config__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Label of the Field.</description>
    <label>Field Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>