force-app/main/default/objects/Data_Quality_Field_Config__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this field required for data quality?</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>