force-app/main/default/objects/Data_Quality_Field_Config__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Order of the field in display.</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>