force-app/main/default/objects/Data_Quality_Field_Config__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Importance weight of the field (1-5).</description>
    <label>Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1 - Low</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Minor</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Medium</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - High</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Critical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>